--- a/src/main/resources/static/css/kalah.css
+++ b/src/main/resources/static/css/kalah.css
@@ -8,10 +8,24 @@ button {
     cursor: pointer;
     padding: 7px 13px;
     border: 1px solid #ccc;
-    border-radius: 3px;
+    border-radius: 10px;
     color: #555;
     background: #f7f7f7;
     box-shadow: inset 0 1px 0 #fff, 0 1px 0 rgba( 0, 0, 0, 0.08 );
+}
+
+button:disabled {
+    background: #F5F5F5;
+    color : #C3C3C3;
+    cursor:none;
+    pointer-events: none;
+}
+
+.form-control {
+  line-height: 1;
+  margin-top: 1px;
+  border-radius: 10px;
+  background-color: rgba(0,0,0,.11);
 }
 
 .start {
@@ -22,6 +36,7 @@ button {
 .gameStatus {
   font-weight: bold;
   font-size: 20px;
+  text-align: left;
 }
 
 .board {
@@ -72,7 +87,7 @@ button {
 }
 
 .store.player2, .player2 .pit {
-    color: #55c1c3;
+    color: #DDF1F2;
 }
 
 .store.player1, .player1 .pit {
